      i386, drop usb CD support from it to make it build again.
    - Stop abusing the build system in sparc.cfg by pretending that cdrom
      and miniiso are subarches. Add a "combined" subarch for these images
      that really contain both sparc64 and sparc32 support.
    - Included 2.6.8 kernel for amd64. Closes: #307306
  * Kurt Roeckx
    - Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
      package list.
  * Christian Perrier
    - Add the list of needed characters for Kazakh
    - Add the list of needed characters for Vietnamese
  * Colin Watson
    - Force HOME=$(TEMP) for hfsutils calls throughout powerpc
      hd_media_common target.
    - Ship yaboot with powerpc hd-media images.
  * Frans Pop
    - Fix logic error in build/util/pkg-list to get rid of incorrect warnings
      about missing lists.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 28 Apr 2005 20:47:19 +0200

debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed to build PDF/TXT versions of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:12:46 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.